--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.2.1",
     "apexcharts": "^3.35.4",
     "axios": "^0.27.2",
+    "lottie-web": "^5.9.6",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
